<resources>
    <!-- Global text -->
    <string name="app_name">mUzima PHR</string>

    <!-- Landing page text -->

    <!-- Navigation drawer text -->
    <string name="profile_menu_text">Profile</string>
    <string name="primary_notifications_text">Primary Notifications</string>
    <string name="active_notifications_text">Active Notifications</string>
    <string name="settings_text">Settings</string>
    <string name="help_and_feedback_text">Help and Feedback</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="deactivated_notifications">Deactivated notifications</string>

    <!-- landing page text -->
    <string name="data_text">Data</string>
    <string name="forms_text">Forms</string>
    <string name="notifications_text">Notifications</string>
    <string name="profile_text">Profile</string>
    <string name="welcome_message_text">For Patients</string>
    <string name="message_basket_text">Message Busket</string>
    <string name="clinical_summary_text">Clinical Summary</string>
    <string name="laboratory_results_text">Laboratory Results</string>
    <string name="facillity_locator_text">Facility Locator</string>
    <string name="health_data_text">Health Data</string>

    <!-- data category selection view text -->
    <string name="self_entered_data_text">Self entered data</string>
    <string name="provider_entered_data_text">Provider entered data</string>
    <string name="phr_data_text">mUzima PHR Data</string>

    <!-- Notifications view text -->
    <string name="phr_notifications">PHR Notifications</string>

    <!-- Log In Screen text -->
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="phr_version_text">version 1.0.1</string>

    <!-- mUzima PHR Forms text -->
    <string name="phr_forms_text">PHR Forms</string>

    <!-- mUzima PHR Profile fields text -->
    <string name="openmrs_id_text">OpenMRS ID</string>
    <string name="user_first_name_field_text">First Name</string>
    <string name="user_middle_name_field_text">Middle Name</string>
    <string name="user_last_name_field_text">Last Name</string>
    <string name="user_dob_text_field">DoB</string>

    <!-- phr detailed notifications view -->
    <string name="confirm_notification_text">Confirm</string>
    <string name="decline_notification_text">Decline</string>

    <!-- mUzima wrong password text view -->
    <string name="phr_wrong_password_text">Wrong Password</string>
    <string name="wrong_password_message">Sorry you have entered wrong password/username combination,please try again or contact the system administrator.Send email to:<a href="http://demo1.muzima.org">provider@host.com</a></string>

    <!-- Initial set up screen text -->
    <string name="initial_set_up_running_text">Initial Setup running please wait!</string>

    <!-- settings activity text -->
    <string name="update_your_profile_text">Update your profile</string>
    <string name="theme_selection_text">Select theme</string>
    <string name="show_server_address_text">Show Server Address</string>
    <string name="media_notification_enabled_text">Enable media notification</string>
    <string name="auto_upload_enabled_text">Auto-upload enabled</string>
    <string name="enable_geo_location">Track my location</string>
    <string name="volume_warning_text">Note:The following volume settings are relative to the device\'s music or volume stream volume</string>

    <!-- temp text -->
    <string name="fake_user">muzimaphr@user.com</string>
    <string name="notifications_stats_text">2 unread</string>
    <string name="data_stats">Sync started</string>
    <string name="profile_stats">View profile</string>
    <string name="forms_stats">6 Complete 3 Drafts</string>
    <string name="sample_openmrs_id">Client6745</string>
    <string name="user_first_name">Joshua</string>
    <string name="user_last_name">Muliro</string>
    <string name="user_middle_name">Kiboswaii</string>
    <string name="user_dob">1993/04/12</string>
    <string name="phre_notification_title_text">Stage II Hypertension</string>
    <string name="phr_notification_action_text">Refer to clinical officer</string>
    <string name="phr_form_body_text">Start  HTCTZ 25 mg OD and Amlodipine 5mg OD CONTINUE CURRENT REGIME AND REFER</string>
</resources>
