<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/client_profile_menu_item"
        android:checkable="true"
        android:icon="@drawable/ic_action_user"
        android:title="@string/profile_menu_text" />

    <item
        android:id="@+id/export_data_menu_item"
        android:title="Export your data"
        android:checkable="true"
        android:icon="@drawable/ic_action_primary_notification"/>
    <item
        android:id="@+id/settings_menu_item"
        android:checkable="true"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings_text" />

    <item
        android:id="@+id/help_and_feedback_menu"
        android:checkable="true"
        android:icon="@drawable/ic_action_help_and_feedback"
        android:title="@string/help_and_feedback_text" />

</menu>