<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/landing_page_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:padding="16dp"
        app:srcCompat="@drawable/ic_action_user_profile_picture_large" />

    <TextView
        android:id="@+id/muzima_phr_home_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landing_page_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_message_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/muzima_phr_home_title_textView"
        android:layout_below="@+id/muzima_phr_home_title_textView"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:text="@string/welcome_message_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/welcome_message_textView"
        android:layout_marginTop="16dp"
        android:background="@drawable/curved_shaped_widget_layout"
        android:padding="8dp"
        android:text="@string/username_text" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_editText"
        android:background="@drawable/curved_shapte_bottom"
        android:text="@string/user_middle_name"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/password_change_checkBox"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/curved_shaped_widget_blue"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/version_declaration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/phr_version_text"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/password_change_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingBottom="4dp"
        android:text="Did you change your password recently ?"
        android:textColor="@android:color/white" />


</RelativeLayout>

