<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/landing_page_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:padding="16dp"
        app:srcCompat="@drawable/ic_action_user_profile_picture_large" />

    <TextView
        android:id="@+id/muzima_phr_home_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landing_page_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:ems="10"
        android:text="@string/app_name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/welcome_message_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/muzima_phr_home_title_textView"
        android:layout_below="@+id/muzima_phr_home_title_textView"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:ems="10"
        android:text="@string/welcome_message_text"
        android:textAlignment="center" />

    <android.support.v7.widget.CardView
        android:id="@+id/data_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:background="@color/muzima_theme_blue"
            android:padding="1dp">

            <TextView
                android:id="@+id/data_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:text="@string/data_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/data_description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/data_title_textView"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/data_stats"
                android:textColor="@android:color/white" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toStartOf="@+id/data_cardView"
        android:layout_alignTop="@+id/data_cardView"
        android:layout_marginEnd="21dp"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/data_cardView"
            android:layout_toEndOf="@+id/landing_page_imageView"
            android:background="@color/muzima_theme_blue"
            android:padding="1dp">

            <TextView
                android:id="@+id/cohorta_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:text="@string/profile_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cohorta_title"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/profile_stats"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/data_cardView"
        android:layout_alignTop="@+id/relativeLayout"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:background="@color/muzima_theme_blue"
            android:padding="1dp">

            <TextView
                android:id="@+id/profile_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:text="@string/notifications_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/profile_title_textView"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/notifications_stats_text"
                android:textColor="@android:color/white" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/forms_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/profile_cardView"
        android:layout_alignTop="@+id/profile_cardView"
        android:layout_marginEnd="21dp"
        android:clickable="true"
        android:focusable="true">

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardView2"
        android:layout_alignStart="@+id/cardView2"
        android:layout_below="@+id/cardView2"
        android:layout_marginTop="17dp"
        android:background="@color/muzima_theme_blue"
        android:padding="1dp">

        <TextView
            android:id="@+id/forms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:text="@string/forms_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forms_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/forms_title"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/forms_stats"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>

