<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile_button"
            android:background="@android:color/black"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:padding="8dp"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/update_your_profile_text"
            android:layout_marginStart="23dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Spinner
            android:id="@+id/theme_color_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:id="@+id/server_address_show_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:text="@string/show_server_address_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/white"
            android:text="@string/media_notification_enabled_text"
            android:id="@+id/media_notification_settings"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/white"
            android:text="@string/auto_upload_enabled_text"
            android:id="@+id/auto_upload_content_settings"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/sound_note_textView"
            android:text="@string/volume_warning_text"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/enabled_vibration_switch"
            android:text="Vibrate"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/show_notification_fullscreen_switch"
            android:text="Show notification full screen"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <include layout="@layout/sound_settings_layout_content"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/geolocation_settings"
            android:text="@string/enable_geo_location"/>


    </LinearLayout>


</RelativeLayout>
